k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tcs
  labels:
    name: tcs
    istio-injection: enabled
